# ReplyPilot

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  branches.txt  remote.txt
ai-service/: pyproject.toml  requirements.txt
ai-service/app/: app.py  classify.py  generate.py  main.py  requirements.txt
ai-service/app/api/v1/: classify.py  generate.py
ai-service/app/core/: logging.py
ai-service/app/model_files/: config.json  model.safetensors
ai-service/app/models/: intent_classifier_training.ipynb
ai-service/app/schemas/: comment.py  reply.py
ai-service/app/services/: classify_service.py  generate.py
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  index.css
client/src/api/: axios.js  batch.js  channel.js  comments.js  personas.js  replies.js
client/src/components/: ProtectedRoute.jsx
client/src/context/: AuthContext.jsx
client/src/hooks/: useAuth.jsx
client/src/layouts/: AppLayout.jsx
client/src/pages/: DashboardPage.jsx  LandingPage.jsx  PersonasPage.jsx  RepliesPage.jsx  VideoDetailPage.jsx  VideosPage.jsx
rag/: .env.sample  pyproject.toml  requirements.txt
rag/app/: main.py
rag/app/api/middleware/: error_handler.py
rag/app/api/routes/: health.py  ingest.py  query.py
rag/app/core/: config.py  exceptions.py  logger.py
rag/app/pipeline/:  orchestrator.py  orchestrator.py
rag/app/pipeline/chunking/: context_builder.py  models.py  token_splitter.py
rag/app/pipeline/embedding/: base.py  batch_manager.py  bge_embedder.py  models.py
rag/app/pipeline/ingestion/: guard.py  redis_reader.py  text_cleaner.py
rag/app/pipeline/storage/: models.py  payload_builder.py  pinecone_client.py
rag/app/retrieval/: query_embedder.py  reranker.py  searcher.py
rag/app/services/: ingest_service.py  query_service.py
rag/app/worker/: queue_consumer.py  tasks.py
rag/scripts/: benchmark_embedding.py  inspect_index.py  seed_redis.py
server/: package-lock.json  package.json  server.js
server/logs/: .41b65cc1cb38b38c194f467f99adc6136892fb5f-audit.json  .65d31521bab7846f7c5e577eef92fd8840e60b95-audit.json
server/src/: app.js
server/src/config/: constants.js  cors.js  db.js  env.js  googleOAuth.js  passport.js  redis.js
server/src/controllers/: Channel.controller.js  Persona.controller.js  batch.controller.js  comments.controller.js  reply.controller.js  youtube.controller.js
server/src/jobs/: commentFetch.job.js  syncComments.job.js
server/src/middleware/: auth.middleware.js  csrf.middleware.js  error.middleware.js  rateLimiter.middleware.js  requestLogger.middleware.js  youtubeToken.middleware.js
server/src/models/: Channel.models.js  Comment.models.js  Persona.models.js  PersonaExample.models.js  Reply.models.js  User.models.js
server/src/routes/: Channel.routes.js  Persona.routes.js  auth.routes.js  batch.routes.js  comments.routes.js  reply.routes.js  view.routes.js  youtube.routes.js
server/src/services/: Channel.service.js  aiService.js  comment.service.js  queue.service.js  replyService.js  youtube.service.js
server/src/utils/: ApiError.js  crypto.js  logger.js  youtubeToken.helper.js
server/src/workers/: classify.worker.js  generate.worker.js  index.js  postReply.worker.js
worker/: main.js  package-lock.json  package.json  test-sync.js
worker/client/src/: App.jsx
worker/client/src/pages/: DashboardPage.jsx  LandingPage.jsx
worker/config/: db.js  env.js  redis.js
worker/logs/: .a265520871918804611b77477652bfac2275d0fd-audit.json  .f5c7bf220bb2ae39dcf26bb815995cbfc7cc49e3-audit.json
worker/models/: Comment.models.js  Persona.models.js  Reply.models.js  User.models.js  Video.models.js
worker/tasks/: classify.worker.js  generate.worker.js  index.js  postReply.worker.js  scheduler.js  youtubeSync.worker.js
worker/utils/: httpClient.js  logger.js  queueHelpers.js  youtubeClient.js  youtubeToken.helper.js
