[project]
name            = "ai-service"
version         = "1.0.0"
description     = "Intent classification and reply generation for YouTube comments"
requires-python = ">=3.11"


[tool.ruff]
line-length     = 100
target-version  = "py311"
select          = ["E", "F", "I", "UP"]
ignore          = ["E501"]

[tool.black]
line-length     = 100
target-version  = ["py311"]

[tool.mypy]
python_version  = "3.11"
strict          = false
ignore_missing_imports = true
