# =============================================================================
# pyproject.toml
# =============================================================================
# Central config for all dev tools — ruff, black, mypy, pytest.
# None of these tools need their own config files when this is present.

[project]
name = "yt-rag"
version = "1.0.0"
description = "Production RAG pipeline over YouTube transcripts stored in Redis"
requires-python = ">=3.11"
readme = "README.md"

# ── Runtime dependencies (mirrors requirements.txt) ───────────────────────────
# Keeping both files in sync is intentional:
#   requirements.txt → used by pip / Docker for pinned installs
#   pyproject.toml   → used by tools and for project metadata
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "starlette==0.38.2",
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "redis[hiredis]==5.0.8",
    "pinecone-client==4.1.2",
    "sentence-transformers==3.1.1",
    "torch==2.4.1",
    "transformers==4.44.2",
    "tokenizers==0.19.1",
    "tiktoken==0.7.0",
    "loguru==0.7.2",
    "httpx==0.27.2",
    "anyio==4.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-asyncio==0.23.8",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "ruff==0.6.3",
    "black==24.8.0",
    "mypy==1.11.2",
    "types-redis==4.6.0.20241004",
    "ipython==8.26.0",
    "python-dotenv==1.0.1",
]


# =============================================================================
# Ruff — linter + import sorter
# Replaces: flake8, isort, pyupgrade, pep8-naming
# Docs: https://docs.astral.sh/ruff/
# =============================================================================

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (undefined names, unused imports, etc.)
    "I",    # isort (import ordering)
    "N",    # pep8-naming (class names, function names, etc.)
    "UP",   # pyupgrade (modernise syntax — e.g. Optional[X] → X | None)
    "B",    # flake8-bugbear (common bugs and anti-patterns)
    "C4",   # flake8-comprehensions (unnecessary list/dict/set calls)
    "SIM",  # flake8-simplify (simplifiable code patterns)
    "TCH",  # flake8-type-checking (move type-only imports into TYPE_CHECKING)
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long — black handles this
    "B008",   # do not perform function calls in argument defaults (fastapi Depends)
    "N999",   # invalid module name — our folder names are fine
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
# Tests can use assert statements and don't need type annotations
"tests/**" = ["S101", "ANN"]
# Scripts are standalone utilities, relax rules
"scripts/**" = ["T201", "ANN"]


# =============================================================================
# Black — code formatter
# Docs: https://black.readthedocs.io
# =============================================================================

[tool.black]
line-length = 100
target-version = ["py311"]
# Exclude generated or vendored files
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | \.mypy_cache
  | \.pytest_cache
)/
'''


# =============================================================================
# Mypy — static type checker
# Docs: https://mypy.readthedocs.io
# =============================================================================

[tool.mypy]
python_version = "3.11"
strict = false                      # start lenient, tighten over time
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true        # all functions must have type annotations
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true

# Third-party libs without stubs — tell mypy to ignore them
[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "pinecone.*",
    "loguru.*",
    "tiktoken.*",
    "torch.*",
    "transformers.*",
]
ignore_missing_imports = true


# =============================================================================
# Pytest — test runner
# Docs: https://docs.pytest.org
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"               # all async tests run without @pytest.mark.asyncio
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",             # fail on unknown markers
    "--tb=short",                   # shorter tracebacks
    "-q",                           # quiet output
    "--cov=app",                    # measure coverage for app/ only
    "--cov-report=term-missing",    # show missing lines in terminal
    "--cov-report=html:htmlcov",    # also write HTML report to htmlcov/
    "--cov-fail-under=70",          # fail CI if coverage drops below 70%
]
markers = [
    "unit: fast isolated unit tests (no external dependencies)",
    "integration: tests that hit Redis, Pinecone, or the embedding model",
    "slow: tests that take more than a few seconds (model loading etc.)",
]

# Suppress noisy deprecation warnings from third-party libs
filterwarnings = [
    "ignore::DeprecationWarning:transformers",
    "ignore::DeprecationWarning:torch",
    "ignore::UserWarning:sentence_transformers",
]


# =============================================================================
# Coverage — what to include / exclude from reports
# =============================================================================

[tool.coverage.run]
source = ["app"]
omit = [
    "app/__init__.py",
    "app/*/  __init__.py",
    "app/core/logger.py",           # logging config — hard to unit test meaningfully
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]